unpackaged/main/default/objects/Integration_Queue__c/Integration_Queue__c.object-meta.xml
<CustomObject>
    <description>Custom object used to create records for triggering integration flows in Workato</description>
    <label>Integration Queue</label>
    <nameField>
        <displayFormat>IQ-{000000000}</displayFormat>
        <label>Integration Queue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>