unpackaged/main/default/objects/Integration_Queue__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message returned from Workato if integration recipe fails</description>
    <inlineHelpText>Error message returned from Workato if integration recipe fails</inlineHelpText>
    <label>Error Message</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>