unpackaged/main/default/objects/Integration_Queue__c/fields/Integration_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Record_Id__c</fullName>
    <description>18 digit SFDC Id for the record that created the Integration Queue</description>
    <inlineHelpText>18 digit SFDC Id for the record that created the Integration Queue</inlineHelpText>
    <label>Integration Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>