unpackaged/main/default/objects/Integration_Queue__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Corresponding object name from the record that created the Integration Queue (auto-set by system via Flow)</description>
    <inlineHelpText>Corresponding object name from the record that created the Integration Queue (auto-set by system via Flow)</inlineHelpText>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Trial Request</fullName>
            </value>
            <value>
                <fullName>Value+</fullName>
            </value>
            <value>
                <fullName>Product User</fullName>
            </value>
            <value>
                <fullName>Product Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>