unpackaged/main/default/objects/Integration_Queue__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Name/purpose of integration process for use in Workato recipe logic</description>
    <inlineHelpText>Name/purpose of integration process for use in Workato recipe logic</inlineHelpText>
    <label>Process Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>