unpackaged/main/default/objects/Integration_Queue__c/fields/Sub_Process__c.field-meta.xml
<CustomField>
    <fullName>Sub_Process__c</fullName>
    <description>Identifier to enable multiple dynamic outcomes in Workato under the same process name</description>
    <label>Sub Process</label>
    <length>100</length>
    <type>Text</type>
</CustomField>