unpackaged/main/default/objects/Integration_Queue__c/fields/Workato_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Workato_Job_Id__c</fullName>
    <description>Link to the processing job from Workato</description>
    <inlineHelpText>Link to the processing job from Workato</inlineHelpText>
    <label>Workato Job Id</label>
    <type>Url</type>
</CustomField>