unpackaged/main/default/objects/Integration_Queue__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Integration_Record_Id__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Sub_Process__c</columns>
    <columns>Object__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>Workato_Job_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>